--- a/src/collective/documentfusion/locales/fr/LC_MESSAGES/collective.documentfusion.po
+++ b/src/collective/documentfusion/locales/fr/LC_MESSAGES/collective.documentfusion.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2014-02-04 09:24+0000\n"
+"POT-Creation-Date: 2014-06-26 09:42+0000\n"
 "PO-Revision-Date: 2014-02-04 10:28+0100\n"
 "Last-Translator: Thomas Desvenain <thomasdesvenain@ecreall.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,29 +15,31 @@ msgstr ""
 "Domain: DOMAIN\n"
 "X-Generator: Poedit 1.5.4\n"
 
-#: ../browser/views.py:75
-msgid ""
-"Document generation failed, please retry document generation or contact your "
-"administrator..."
-msgstr ""
-"La génération du document a échoué, veuillez réessayer la génération ou "
-"contacter votre administrateur"
+#: ../browser/views.py:78
+msgid "Document generation failed, please retry document generation or contact your administrator..."
+msgstr "La génération du document a échoué, veuillez réessayer la génération ou contacter votre administrateur"
 
-#: ../browser/views.py:41
+#: ../browser/views.py:42
 msgid "Document generation failed, please retry or contact your administrator"
-msgstr ""
-"La génération du document a échoué, veuillez réessayer ou contacter votre "
-"administrateur"
+msgstr "La génération du document a échoué, veuillez réessayer ou contacter votre administrateur"
 
-#: ../browser/views.py:73
+#: ../browser/views.py:75
 msgid "Document generation in progress, please retry later..."
 msgstr "Génération du document en cours, veuillez réessayer plus tard..."
 
-#: ../browser/views.py:46
+#: ../browser/views.py:48
 msgid "Get the generated file."
 msgstr "Télécharger le document généré"
 
-#: ../browser/views.py:77
+#: ../interfaces.py:60
+msgid "LibreOffice host"
+msgstr "Hôte de LibreOffice"
+
+#: ../interfaces.py:57
+msgid "LibreOffice port"
+msgstr "Port de LibreOffice"
+
+#: ../browser/views.py:81
 msgid "No document generated here"
 msgstr "Aucun document généré à télécharger"
 
@@ -48,3 +50,12 @@ msgstr "Génération du document en cours, veuillez rafraîchir la page..."
 #: ../profiles/default/actions.xml
 msgid "Refresh generated document"
 msgstr "Mettre à jour le document généré"
+
+#: ../interfaces.py:61
+msgid "The hostname from where LibreOffice is served"
+msgstr "Le nom de l'hôte (host) du service LibreOffice"
+
+#: ../interfaces.py:58
+msgid "The port used by LibreOffice service"
+msgstr "Le port utilisé par le service Libreoffice"
+
